test/fixtures/behaviors/common/error/badSyntax.behavior.ts
import { behavior } from "esbehavior"

export default behavior("Something", [
  //@ts-ignore
  blahblah()
])